tests/snapshots/examples_fixtures/aoc__2025__aoc_day7_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day7_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_part2.flx:30:16
   |
30 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_part2.flx:31:17
   |
31 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2025/aoc_day7_part2.flx:32:5
   |
32 |     concat(concat(left, [|value|]), right)
   |     ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day7_part2.flx:44:50
   |
44 |     if i >= n { acc } else { zeros_acc(i + 1, n, push(acc, 0)) }
   |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_part2.flx:85:13
   |
85 |     let m = put({}, "next", next_counts)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_part2.flx:86:5
   |
86 |     put(m, "done", finished)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_part2.flx:90:11
   |
90 |     match get(x, "next") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_part2.flx:97:11
   |
97 |     match get(x, "done") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day7_part2.flx:130:20
    |
130 |         finished + sum(active_counts)
    |                    ^^^

Hint:
  Define it first: let sum = ...;

Found 9 errors.
== stdout ==
<not executed>
